 * Make chat accounts accessible from system tray.
 * Fix autoscrolling of debugging console.
 * Show conversation history up to 2 weeks.
 * Download updates in the background and prompt user after download.
 * Merge shares browse / search views.
 * Fix "open at login" option when multiple accounts are used.
 * Perform search on shares as the user types.

wiLink 0.9.8 (2010-06-27)
 * Add a new layout for the chat history.
 * Make it possible to search in chat history.
 * Make it possible to search in debugging console.
 * Improve insertion of line breaks in the chat input.
 * Use silent installer for upgrades on Windows.
 * Fix sorting of roster entries with identical names.
 * Detect Linux desktop environment and prefer KDE/GNOME wallet accordingly.

wiLink 0.9.7 (2010-06-23)
 * After renaming a contact, display the new name.
 * Upon disconnection, mark contacts as offline instead of clearing roster.
 * Display the number of pending messages in the window title.
 * Fix a crash when accessing logger during exit.
 * Make Windows installer kill running wiLink instances.

wiLink 0.9.6 (2010-06-16)
 * When reconnecting to the chat server, preserve busy/away information.
 * Close shares database at exit.
 * Clear chat room participants upon disconnection from server.
 * When messages cannot be sent, don't clear the user's input.
 * Display transfer speed in bits per second.
 * Fix message grouping for out-of-order messages.
 * Add new icon set.
 * Make it possible to download files using double click.
 * Respect peer/folder/file orders when updating shares view.
 * Update share entries when new versions are received.
 * Don't bring chat windows to front upon right click on tray icon.
 * Allow longer timeouts for large files.
 * Check for updates daily and make it possible to manually trigger update.

wiLink 0.9.4 (2010-05-18)
 * Hide diagnostics from roster when it is closed.
 * Fix spacing of photo previews on Windows.